[CI] fixing pck manager

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,12 +45,12 @@ jobs:
       if: matrix.os == 'windows-latest'
       shell: bash
       run: |
-        choco install -y curl wget unzip
+        choco install -y curl wget
         latest_tag=$(curl --silent https://api.github.com/repos/robotology/robotology-superbuild-dependencies-vcpkg/releases/latest | grep '"tag_name"' | sed -E 's/.*"([^"]+)".*/\1/')
         echo "Installing robotology-superbuild-dependencies-vcpkg@${latest_tag}"
         cd C:/
         wget https://github.com/robotology/robotology-superbuild-dependencies-vcpkg/releases/download/${latest_tag}/vcpkg-robotology.zip
-        unzip vcpkg-robotology.zip -d C:/
+        7z x vcpkg-robotology.zip -oC:/
         echo "VCPKG_INSTALLATION_ROOT=C:/robotology/vcpkg" >> ${GITHUB_ENV}
 
     - name: Dependencies [macOS]
