--- a/src/tools/strainCalib/strainCalibLib/CMakeLists.txt
+++ b/src/tools/strainCalib/strainCalibLib/CMakeLists.txt
@@ -8,14 +8,14 @@ source_group("Source Files" FILES ${folder_source})
 source_group("Header Files" FILES ${folder_header})
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../ethLoader/ethLoaderLib)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../canLoader/canLoaderLib)
 
 add_library(${PROJECT_NAME} ${folder_source} ${folder_header})
 
 target_link_libraries(${PROJECT_NAME} YARP::YARP_os
                                       YARP::YARP_dev
                                       ACE::ACE
-                                      icub_firmware_shared::embobj)
+                                      icub_firmware_shared::embobj
+                                      canLoaderLib)
 target_include_directories(${PROJECT_NAME} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
                                                   "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
 
