--- a/app/default/scripts/cameras_calib.xml.template
+++ b/app/default/scripts/cameras_calib.xml.template
@@ -4,7 +4,12 @@
 </dependencies> 
 <module>
   <name>yarpdev</name>
-      <parameters> --from camera/ServerGrabberDualDragon.ini --split true</parameters>
+      <parameters> --from camera/dragonfly2_config_left.ini --split true</parameters>
+  <node>pc104</node>
+</module>
+<module>
+  <name>yarpdev</name>
+      <parameters> --from camera/dragonfly2_config_right.ini --split true</parameters>
   <node>pc104</node>
 </module>
 <module>
