--- a/app/default/scripts/cameras_calib.xml.template
+++ b/app/default/scripts/cameras_calib.xml.template
@@ -4,12 +4,12 @@
 </dependencies> 
 <module>
   <name>yarpdev</name>
-      <parameters> --from camera/dragonfly2_config_left.ini --split true</parameters>
+      <parameters> --from camera/dragonfly2_config_left.ini </parameters>
   <node>pc104</node>
 </module>
 <module>
   <name>yarpdev</name>
-      <parameters> --from camera/dragonfly2_config_right.ini --split true</parameters>
+      <parameters> --from camera/dragonfly2_config_right.ini </parameters>
   <node>pc104</node>
 </module>
 <module>
