--- a/app/faceExpressions/scripts/faceExpressions.xml.template
+++ b/app/faceExpressions/scripts/faceExpressions.xml.template
@@ -1,8 +1,8 @@
 <application>
 <name>Face Expressions</name>
 <module>
-      <name>yarpdev</name>
-      <parameters>--name /icub/face/raw --device serialPort_nws_yarp --subdevice serialport --context faceExpressions --from serialport.ini</parameters>
+      <name>yarprobotinterface</name>
+      <parameters>--config serialPortFaceExpressions.xml</parameters>
 	  <node>pc104</node>
 	<tag>face_device</tag>
    </module>
