[face-exp] fixed context

--- a/app/faceExpressions/CMakeLists.txt
+++ b/app/faceExpressions/CMakeLists.txt
@@ -3,9 +3,9 @@ set(appname faceExpressions)
 file(GLOB scripts ${CMAKE_CURRENT_SOURCE_DIR}/scripts/*.template
                   ${CMAKE_CURRENT_SOURCE_DIR}/scripts/*.xml
                   ${CMAKE_CURRENT_SOURCE_DIR}/scripts/*.sh)
-file(GLOB conf ${CMAKE_CURRENT_SOURCE_DIR}/conf/*.ini)
+file(GLOB conf ${CMAKE_CURRENT_SOURCE_DIR}/conf/*.ini
+               ${CMAKE_CURRENT_SOURCE_DIR}/conf/*.xml)
                            
 yarp_install(FILES ${conf} DESTINATION ${ICUB_CONTEXTS_INSTALL_DIR}/${appname})
 yarp_install(FILES ${scripts} DESTINATION ${ICUB_APPLICATIONS_TEMPLATES_INSTALL_DIR})
-
 
