--- a/app/skinGui/conf/skinManAllPlusLegs.ini
+++ b/app/skinGui/conf/skinManAllPlusLegs.ini
@@ -40,8 +40,15 @@ smoothFactor                0.5
 binarization                true
 
 [SKIN_EVENTS]
-skinParts           ( 8 9 11 12 )
-taxelPositionFiles  (   positions/left_leg_upper.txt	\
+skinParts           ( 1 2 3 4 5 6 7 8 9 11 12 )
+taxelPositionFiles  (   positions/left_hand_V2_1.txt	\
+                        positions/left_forearm_mesh.txt	\
+                        positions/left_arm_mesh.txt	\
+                        positions/right_hand_V2_1.txt	\
+                        positions/right_forearm_mesh.txt\
+                        positions/right_arm_mesh.txt	\
+                        positions/torso.txt		\
+			positions/left_leg_upper.txt	\
                         positions/left_leg_lower.txt	\
                         positions/right_leg_upper.txt	\
                         positions/right_leg_lower.txt	)
