Add leg skin spatial calibration (#897)

--- a/app/skinGui/conf/skinManAllPlusLegs.ini
+++ b/app/skinGui/conf/skinManAllPlusLegs.ini
@@ -40,7 +40,18 @@ smoothFactor                0.5
 binarization                true
 
 [SKIN_EVENTS]
-skinParts           ( 1 2 3 4 5 6 7 8 9 10 11 12 13)
+skinParts           ( 1 2 3 4 5 6 7 8 9 11 12 )
+taxelPositionFiles  (   positions/left_hand_V2_1.txt	\
+                        positions/left_forearm_mesh.txt	\
+                        positions/left_arm_mesh.txt	\
+                        positions/right_hand_V2_1.txt	\
+                        positions/right_forearm_mesh.txt\
+                        positions/right_arm_mesh.txt	\
+                        positions/torso.txt		\
+			positions/left_leg_upper.txt	\
+                        positions/left_leg_lower.txt	\
+                        positions/right_leg_upper.txt	\
+                        positions/right_leg_lower.txt	)
 maxNeighborDist	0.015
 
 %enum SkinPart: UNKNOWN_SKIN_PART=0, LEFT_HAND, LEFT_FOREARM, LEFT_UPPER_ARM, RIGHT_HAND, RIGHT_FOREARM, RIGHT_UPPER_ARM, FRONT_TORSO, LEFT_LEG_UPPER, LEFT_LEG_LOWER, LEFT_FOOT, RIGHT_LEG_UPPER, RIGHT_LEG_LOWER, RIGHT_FOOT
