Do not redefine CMAKE_INSTALL_PYTHONDIR if it is already defined

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -68,8 +68,10 @@ if(CREATE_PYTHON)
                     OUTPUT_STRIP_TRAILING_WHITESPACE)
 
     set(_CMAKE_INSTALL_PYTHONDIR "${PYTHON_INSTDIR}")
-    set(CMAKE_INSTALL_PYTHONDIR ${_CMAKE_INSTALL_PYTHONDIR} CACHE PATH "python bindings (${_CMAKE_INSTALL_PYTHONDIR})")
-    mark_as_advanced(CMAKE_INSTALL_PYTHONDIR)
+    if(NOT DEFINED CMAKE_INSTALL_PYTHONDIR)
+      set(CMAKE_INSTALL_PYTHONDIR ${_CMAKE_INSTALL_PYTHONDIR} CACHE PATH "python bindings (${_CMAKE_INSTALL_PYTHONDIR})")
+      mark_as_advanced(CMAKE_INSTALL_PYTHONDIR)
+    endif()
     if(NOT IS_ABSOLUTE ${CMAKE_INSTALL_PYTHONDIR})
       set(CMAKE_INSTALL_FULL_PYTHONDIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_PYTHONDIR}")
     else()
