--- a/src/tools/depth2kin/CMakeLists.txt
+++ b/src/tools/depth2kin/CMakeLists.txt
@@ -24,7 +24,7 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE ${IPOPT_DEFINITIONS} _USE_MAT
 set_property(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY LINK_FLAGS " ${IPOPT_LINK_FLAGS}")
 target_link_libraries(${PROJECT_NAME} ${YARP_LIBRARIES}
                                       ${IPOPT_LIBRARIES}
-                                      ${OpenCV_LIBRARIES}
+                                      ${OpenCV_LIBS}
                                       ctrlLib
                                       iKin
                                       optimization
