--- a/src/modules/dualCamCalib/CMakeLists.txt
+++ b/src/modules/dualCamCalib/CMakeLists.txt
@@ -22,6 +22,6 @@ set(folder_header include/iCub/spherical_projection.h
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 add_executable(${PROJECT_NAME} ${folder_source} ${folder_header})
-target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES} ${YARP_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} ${YARP_LIBRARIES})
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
 
