embObjAnalogSensor: fix compilation after the removal of EoTheInertials2 service
This PR fixes a regressio of https://github.com/robotology/robots-configuration/issues/595

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -158,6 +158,7 @@ jobs:
               -DENABLE_icubmod_canBusSkin:BOOL=ON \
               -DENABLE_icubmod_canBusVirtualAnalogSensor:BOOL=ON \
               -DENABLE_icubmod_embObjFTsensor:BOOL=ON \
+              -DENABLE_icubmod_embObjAnalogSensor:BOOL=ON \
               -DENABLE_icubmod_embObjIMU:BOOL=ON \
               -DENABLE_icubmod_embObjInertials:BOOL=ON \
               -DENABLE_icubmod_embObjMais:BOOL=ON \
