Changes in skinManager config files deleted two redundant configs added two new configs that extend the capabilities other configs updated to point to proper position files

--- a/app/skinGui/conf/skinManAll.ini
+++ b/app/skinGui/conf/skinManAll.ini
@@ -2,17 +2,30 @@ inputPorts (    /icub/skin/left_hand          \
                 /icub/skin/left_forearm       \
                 /icub/skin/left_arm           \
                 /icub/skin/right_hand         \
-                /icub/skin/right_forearm      \
-                /icub/skin/right_arm          \
-                /icub/skin/torso              )
+		/icub/skin/right_forearm      \
+		/icub/skin/right_arm          \
+                /icub/skin/torso              \
+                /icub/skin/left_leg_upper     \
+                /icub/skin/left_leg_lower     \
+                /icub/skin/left_foot          \
+                /icub/skin/right_leg_upper    \
+                /icub/skin/right_leg_lower    \
+                /icub/skin/right_foot         )
+
 
 outputPorts (   /icub/skin/left_hand_comp     \
                 /icub/skin/left_forearm_comp  \
                 /icub/skin/left_arm_comp      \
                 /icub/skin/right_hand_comp    \
-                /icub/skin/right_forearm_comp \
-                /icub/skin/right_arm_comp     \
-                /icub/skin/torso_comp         )
+		 /icub/skin/right_forearm_comp \
+	 	 /icub/skin/right_arm_comp     \
+                /icub/skin/torso_comp         \
+                /icub/skin/left_leg_upper_comp \
+                /icub/skin/left_leg_lower_comp \
+                /icub/skin/left_foot_comp      \
+                /icub/skin/right_leg_upper_comp \
+                /icub/skin/right_leg_lower_comp \
+                /icub/skin/right_foot_comp  )
 
 robot 	                    icub
 name                        skinManager
@@ -27,18 +40,20 @@ smoothFactor                0.5
 binarization                true
 
 [SKIN_EVENTS]
-skinParts           ( 1 2 3 4 5 6 7 )
-taxelPositionFiles  (   positions/left_hand_V2_1.txt      \
-                        positions/left_forearm_mesh.txt   \
-                        positions/left_arm_mesh.txt       \
-                        positions/right_hand_V2_1.txt     \
-                        positions/right_forearm_mesh.txt  \
-                        positions/right_arm_mesh.txt      \
-                        positions/torso.txt               )
+skinParts           ( 1 2 3 4 5 6 7 8 9 10 11 12 13)
+taxelPositionFiles  (   positions/left_hand_V2_1.txt	\
+                        positions/left_forearm_V2.txt	\
+                        positions/left_arm.txt	\
+                        positions/right_hand_V2_1.txt	\
+                        positions/right_forearm_V2.txt\
+                        positions/right_arm.txt	\
+                        positions/torso.txt		\
+			 positions/left_leg_upper.txt	\
+                        positions/left_leg_lower.txt	\
+                        positions/left_foot.txt       \
+                        positions/right_leg_upper.txt	\
+                        positions/right_leg_lower.txt	
+                        positions/right_foot.txt)
 maxNeighborDist	0.015
 
-% The positions files should be in this particular order, matching enum SkinPart from skinDynLib/common.h
-% SKIN_PART_UNKNOWN=0, SKIN_LEFT_HAND, SKIN_LEFT_FOREARM, SKIN_LEFT_UPPER_ARM, 
-% SKIN_RIGHT_HAND, SKIN_RIGHT_FOREARM, SKIN_RIGHT_UPPER_ARM, 
-% SKIN_FRONT_TORSO, LEFT_LEG_UPPER, LEFT_LEG_LOWER, LEFT_FOOT,
-% RIGHT_LEG_UPPER, RIGHT_LEG_LOWER, RIGHT_FOOT,
+%enum SkinPart: UNKNOWN_SKIN_PART=0, LEFT_HAND, LEFT_FOREARM, LEFT_UPPER_ARM, RIGHT_HAND, RIGHT_FOREARM, RIGHT_UPPER_ARM, FRONT_TORSO, LEFT_LEG_UPPER, LEFT_LEG_LOWER, LEFT_FOOT, RIGHT_LEG_UPPER, RIGHT_LEG_LOWER, RIGHT_FOOT
