--- a/app/skinGui/conf/skinManArms.ini
+++ b/app/skinGui/conf/skinManArms.ini
@@ -2,15 +2,15 @@ inputPorts (    /icub/skin/left_hand          \
                 /icub/skin/left_forearm       \
                 /icub/skin/left_arm           \
                 /icub/skin/right_hand         \
-				/icub/skin/right_forearm      \
-				/icub/skin/right_arm          )
+		 /icub/skin/right_forearm      \
+		 /icub/skin/right_arm          )
 
 outputPorts (   /icub/skin/left_hand_comp     \
                 /icub/skin/left_forearm_comp  \
                 /icub/skin/left_arm_comp      \
                 /icub/skin/right_hand_comp    \
-				/icub/skin/right_forearm_comp \
-				/icub/skin/right_arm_comp     )
+		 /icub/skin/right_forearm_comp \
+		/icub/skin/right_arm_comp     )
 
 period	                    20
 minBaseline                 3
@@ -26,11 +26,11 @@ smoothFactor                0.5
 [SKIN_EVENTS]
 skinParts           ( 1 2 3 4 5 6 )
 taxelPositionFiles  (   positions/left_hand_V2_1.txt           \
-                        positions/left_forearm_mesh.txt   \
-                        positions/left_arm_mesh.txt       \
+                        positions/left_forearm_V2.txt   \
+                        positions/left_arm.txt       \
                         positions/right_hand_V2_1.txt          \
-                        positions/right_forearm_mesh.txt  \
-                        positions/right_arm_mesh.txt      )
+                        positions/right_forearm_V2.txt  \
+                        positions/right_arm.txt      )
 maxNeighborDist	0.015
 
 %enum SkinPart: UNKNOWN_SKIN_PART=0, LEFT_HAND, LEFT_FOREARM, LEFT_UPPER_ARM, RIGHT_HAND, RIGHT_FOREARM, RIGHT_UPPER_ARM, FRONT_TORSO
