--- a/app/skinGui/conf/skinManLeft.ini
+++ b/app/skinGui/conf/skinManLeft.ini
@@ -20,8 +20,8 @@ smoothFactor                0.5
 [SKIN_EVENTS]
 skinParts           ( 1 2 3 )
 taxelPositionFiles  (   positions/left_hand_V2_1.txt           \
-                        positions/left_forearm_mesh.txt   \
-                        positions/left_arm_mesh.txt       )
+                        positions/left_forearm_V2.txt   \
+                        positions/left_arm.txt       )
 maxNeighborDist	0.015
 
 %enum SkinPart: UNKNOWN_SKIN_PART=0, LEFT_HAND, LEFT_FOREARM, LEFT_UPPER_ARM, RIGHT_HAND, RIGHT_FOREARM, RIGHT_UPPER_ARM, FRONT_TORSO
