--- a/app/skinGui/conf/skinManRight.ini
+++ b/app/skinGui/conf/skinManRight.ini
@@ -20,8 +20,8 @@ smoothFactor		        0.5
 [SKIN_EVENTS]
 skinParts           ( 4 5 6 )
 taxelPositionFiles  (   positions/right_hand_V2_1.txt          \
-                        positions/right_forearm_mesh.txt  \
-                        positions/right_arm_mesh.txt      )
+                        positions/right_forearm_V2.txt  \
+                        positions/right_arm.txt      )
 maxNeighborDist	    0.015
 
 %enum SkinPart: UNKNOWN_SKIN_PART=0, LEFT_HAND, LEFT_FOREARM, LEFT_UPPER_ARM, RIGHT_HAND, RIGHT_FOREARM, RIGHT_UPPER_ARM, FRONT_TORSO
