skinDynLib: Uniform enum names for the lowerbody parts

--- a/app/skinGui/conf/skinManLowerBody.ini
+++ b/app/skinGui/conf/skinManLowerBody.ini
@@ -36,4 +36,4 @@ taxelPositionFiles  (   positions/torso.txt            \
                         positions/right_leg_lower.txt  )
 maxNeighborDist	0.015
 
-%enum SkinPart: UNKNOWN_SKIN_PART=0, LEFT_HAND, LEFT_FOREARM, LEFT_UPPER_ARM, RIGHT_HAND, RIGHT_FOREARM, RIGHT_UPPER_ARM, FRONT_TORSO, LEFT_LEG_UPPER, LEFT_LEG_LOWER, LEFT_FOOT, RIGHT_LEG_UPPER, RIGHT_LEG_LOWER, RIGHT_FOOT
+%enum SkinPart: UNKNOWN_SKIN_PART=0, LEFT_HAND, LEFT_FOREARM, LEFT_UPPER_ARM, RIGHT_HAND, RIGHT_FOREARM, RIGHT_UPPER_ARM, FRONT_TORSO, SKIN_LEFT_LEG_UPPER, SKIN_LEFT_LEG_LOWER, SKIN_LEFT_FOOT, SKIN_RIGHT_LEG_UPPER, SKIN_RIGHT_LEG_LOWER, SKIN_RIGHT_FOOT
