Uniform the skin ini after the renaming of SkinPart enums

--- a/app/skinGui/conf/skinManLeft.ini
+++ b/app/skinGui/conf/skinManLeft.ini
@@ -24,4 +24,4 @@ taxelPositionFiles  (   positions/left_hand_V2_1.txt           \
                         positions/left_arm_mesh.txt       )
 maxNeighborDist	0.015
 
-%enum SkinPart: UNKNOWN_SKIN_PART=0, LEFT_HAND, LEFT_FOREARM, LEFT_UPPER_ARM, RIGHT_HAND, RIGHT_FOREARM, RIGHT_UPPER_ARM, FRONT_TORSO
+%enum SkinPart: SKIN_PART_UNKNOWN=0, SKIN_LEFT_HAND, SKIN_LEFT_FOREARM, SKIN_LEFT_UPPER_ARM, SKIN_RIGHT_HAND, SKIN_RIGHT_FOREARM, SKIN_RIGHT_UPPER_ARM, SKIN_FRONT_TORSO
