--- a/app/skinGui/conf/skinManLowerBody.ini
+++ b/app/skinGui/conf/skinManLowerBody.ini
@@ -36,4 +36,4 @@ taxelPositionFiles  (   positions/torso.txt            \
                         positions/right_leg_lower.txt  )
 maxNeighborDist	0.015
 
-%enum SkinPart: UNKNOWN_SKIN_PART=0, LEFT_HAND, LEFT_FOREARM, LEFT_UPPER_ARM, RIGHT_HAND, RIGHT_FOREARM, RIGHT_UPPER_ARM, FRONT_TORSO, SKIN_LEFT_LEG_UPPER, SKIN_LEFT_LEG_LOWER, SKIN_LEFT_FOOT, SKIN_RIGHT_LEG_UPPER, SKIN_RIGHT_LEG_LOWER, SKIN_RIGHT_FOOT
+%enum SkinPart: SKIN_PART_UNKNOWN=0, SKIN_LEFT_HAND, SKIN_LEFT_FOREARM, SKIN_LEFT_UPPER_ARM, SKIN_RIGHT_HAND, SKIN_RIGHT_FOREARM, SKIN_RIGHT_UPPER_ARM, SKIN_FRONT_TORSO, SKIN_LEFT_LEG_UPPER, SKIN_LEFT_LEG_LOWER, SKIN_LEFT_FOOT, SKIN_RIGHT_LEG_UPPER, SKIN_RIGHT_LEG_LOWER, SKIN_RIGHT_FOOT
