--- a/app/skinGui/conf/skinManRight.ini
+++ b/app/skinGui/conf/skinManRight.ini
@@ -1,11 +1,11 @@
 inputPorts (    /icub/skin/right_hand           \
 				/icub/skin/right_forearm        \
 				/icub/skin/right_arm            )
-				
+
 outputPorts (	/icub/skin/right_hand_comp      \
 				/icub/skin/right_forearm_comp   \
 				/icub/skin/right_arm_comp       )
-				
+
 period			            20
 minBaseline		            3
 addThreshold	            8
@@ -24,4 +24,4 @@ taxelPositionFiles  (   positions/right_hand_V2_1.txt          \
                         positions/right_arm_mesh.txt      )
 maxNeighborDist	    0.015
 
-%enum SkinPart: UNKNOWN_SKIN_PART=0, LEFT_HAND, LEFT_FOREARM, LEFT_UPPER_ARM, RIGHT_HAND, RIGHT_FOREARM, RIGHT_UPPER_ARM, FRONT_TORSO
+%enum SkinPart: SKIN_PART_UNKNOWN=0, SKIN_LEFT_HAND, SKIN_LEFT_FOREARM, SKIN_LEFT_UPPER_ARM, SKIN_RIGHT_HAND, SKIN_RIGHT_FOREARM, SKIN_RIGHT_UPPER_ARM, SKIN_FRONT_TORSO
