--- a/app/skinGui/conf/skinManForearms.ini
+++ b/app/skinGui/conf/skinManForearms.ini
@@ -2,13 +2,13 @@ inputPorts (    /icub/skin/left_hand          \
                 /icub/skin/left_forearm       \
                 /icub/skin/right_hand         \
 				/icub/skin/right_forearm      )
-									          
+
 
 outputPorts (   /icub/skin/left_hand_comp     \
                 /icub/skin/left_forearm_comp  \
                 /icub/skin/right_hand_comp    \
 				/icub/skin/right_forearm_comp )
-											    
+
 
 period	                    20
 minBaseline                 3
@@ -27,7 +27,7 @@ taxelPositionFiles  (   positions/left_hand_V2_1.txt           \
                         positions/left_forearm_mesh.txt   \
                         positions/right_hand_V2_1.txt          \
                         positions/right_forearm_mesh.txt  )
-                        
+
 maxNeighborDist	0.015
 
-%enum SkinPart: UNKNOWN_SKIN_PART=0, LEFT_HAND, LEFT_FOREARM, RIGHT_HAND, RIGHT_FOREARM
+%enum SkinPart: SKIN_PART_UNKNOWN=0, SKIN_LEFT_HAND, SKIN_LEFT_FOREARM, SKIN_RIGHT_HAND, SKIN_RIGHT_FOREARM
