--- a/app/skinGui/conf/skinManTorso.ini
+++ b/app/skinGui/conf/skinManTorso.ini
@@ -1,7 +1,7 @@
 inputPorts ( /icub/skin/torso )
-				
+
 outputPorts ( /icub/skin/torso_comp )
-				
+
 period			            20
 minBaseline		            3
 addThreshold	            8
@@ -18,4 +18,4 @@ skinParts           ( 7 )
 taxelPositionFiles  ( positions/torso.txt )
 maxNeighborDist	0.015
 
-%enum SkinPart: UNKNOWN_SKIN_PART=0, LEFT_HAND, LEFT_FOREARM, LEFT_UPPER_ARM, RIGHT_HAND, RIGHT_FOREARM, RIGHT_UPPER_ARM, FRONT_TORSO
+%enum SkinPart: SKIN_PART_UNKNOWN=0, SKIN_LEFT_HAND, SKIN_LEFT_FOREARM, SKIN_LEFT_UPPER_ARM, SKIN_RIGHT_HAND, SKIN_RIGHT_FOREARM, SKIN_RIGHT_UPPER_ARM, SKIN_FRONT_TORSO
