Update generic error issue Update Generic error parsing adding common string map
Add icub_firmware_shared::embot lib to embObjLib thus to use embot::core::binary::bit::check
Update include array

--- a/src/libraries/icubmod/embObjLib/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjLib/CMakeLists.txt
@@ -109,6 +109,7 @@ install(TARGETS ${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME} YARP::YARP_os
                                       YARP::YARP_dev
                                       icub_firmware_shared::embobj
+                                      icub_firmware_shared::embot
                                       ACE::ACE)
 
 icub_export_library(${PROJECT_NAME})
