--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -33,3 +33,4 @@ add_subdirectory(depth2kin)
 add_subdirectory(fingertipsPortScope)
 add_subdirectory(oculus)
 add_subdirectory(wholeBodyPlayer)
+add_subdirectory(motorTemperaturePublisher)
