--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(imageBlender)
 add_subdirectory(imageCropper)
 add_subdirectory(embObjProtoTools/boardTransceiver)
 add_subdirectory(wholeBodyPlayer)
+add_subdirectory(motorTemperaturePublisher)
 
 add_subdirectory(canLoader)
 add_subdirectory(ethLoader)
