--- a/src/libraries/icubmod/fakeRawValuesPublisher/CMakeLists.txt
+++ b/src/libraries/icubmod/fakeRawValuesPublisher/CMakeLists.txt
@@ -13,21 +13,21 @@ yarp_prepare_plugin(fakeRawValuesPublisher
 
 if(ENABLE_fakeRawValuesPublisher)
   option(ALLOW_DEVICE_PARAM_PARSER_GENERATION "Generate the param parser for fakeRawValuesPublisher device" OFF)
-  yarp_add_plugin(yarp_fakeRawValuesPublisher)
+  yarp_add_plugin(fakeRawValuesPublisher)
 
-  target_sources(yarp_fakeRawValuesPublisher  PRIVATE FakeRawValuesPublisher.cpp
+  target_sources(fakeRawValuesPublisher  PRIVATE FakeRawValuesPublisher.cpp
                                                       FakeRawValuesPublisher.h
                                                       FakeRawValuesPublisher_ParamsParser.cpp
                                                       FakeRawValuesPublisher_ParamsParser.h
                                                     )
 
-  target_link_libraries(yarp_fakeRawValuesPublisher  PRIVATE YARP::YARP_os
+  target_link_libraries(fakeRawValuesPublisher  PRIVATE YARP::YARP_os
                                                       YARP::YARP_dev
                                                       ICUB::iCubDev)
   list(APPEND YARP_${YARP_PLUGIN_MASTER}_PRIVATE_DEPS YARP_os
                                                       YARP_dev)
 
-  yarp_install(TARGETS yarp_fakeRawValuesPublisher 
+  yarp_install(TARGETS fakeRawValuesPublisher 
                EXPORT YARP_${YARP_PLUGIN_MASTER}
                COMPONENT ${YARP_PLUGIN_MASTER}
                LIBRARY DESTINATION ${YARP_DYNAMIC_PLUGINS_INSTALL_DIR}
@@ -36,5 +36,5 @@ if(ENABLE_fakeRawValuesPublisher)
 
   set(YARP_${YARP_PLUGIN_MASTER}_PRIVATE_DEPS ${YARP_${YARP_PLUGIN_MASTER}_PRIVATE_DEPS} PARENT_SCOPE)
 
-  set_property(TARGET yarp_fakeRawValuesPublisher PROPERTY FOLDER "Plugins/Device")
+  set_property(TARGET fakeRawValuesPublisher PROPERTY FOLDER "Plugins/Device")
 endif()
